--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "d3": "^7.8.5",
     "framer-motion": "^11.1.12",
     "gsap": "^3.12.5",
     "lucide-react": "^0.344.0",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/d3": "^7.4.3",
     "@types/mapbox-gl": "^2.7.19",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
